# avionics_ai

./: CMakeLists.txt  README.md  main.c
bno055/: CMakeLists.txt  bno055.c  bno055.h
